--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -8,11 +8,11 @@
  .logoTitle {
      display: flex;
      text-decoration: none;
-     margin-left: 175px;
+     margin-left: 225px;
  }
 
  .greeting {
-     margin-right: 175px;
+     margin-right: 225px;
  }
 
  .logo {
@@ -23,10 +23,11 @@
  .title {
      font-family: sans-serif;
      font-size: 20px;
-     color: #2d3937;
+     color: #3b4443;
      padding: 10px;
      margin-top: 0;
      letter-spacing: .15ch;
+     font-weight: bold;
  }
 
  .greetingBtn {
@@ -44,13 +45,12 @@
     font-family: sans-serif;
     font-size: 15px;
     font-weight: 700px;
-    max-height: 50px;
+    max-height: 75px;
     text-decoration: none;
     padding: 5px;
     margin: 0 10px 0 10px;
     border-radius: 5px;
     justify-content: flex-end;
-
 }
 
 .login {
