--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -31,6 +31,10 @@ input:focus {
     box-shadow: 0 0 10px #1cc29f;
 }
 
+input {
+    border: 1px solid #2d3937;
+}
+
 input, label {
     display: block;
 }
@@ -63,6 +67,7 @@ input, label {
     font-size: 18px;
     height: 40px;
     width: 300px;
+    
 }
 
 .formSubmit {
@@ -71,8 +76,13 @@ input, label {
     border-radius: 5px;
     color: white;
     padding: 12px;
-    border: 1px solid #cccccc;
+    border: 1px solid #c83400;
     box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), 0 1px 2px rgba(0,0,0,0.05);
+}
+
+.formSubmit:hover {
+    background: #c83400;
+    cursor: pointer;
 }
 
 input {
@@ -81,4 +91,28 @@ input {
 
 strong {
     font-weight: 700;
+}
+
+.fullForm {
+    margin-top: 100px;
+}
+
+.demoBtn {
+    background-color: #1cc29f;
+    box-shadow: 0 2px 0 #15977b;
+    color: white;
+    position: relative;
+    font-family: sans-serif;
+    font-size: 15px;
+    font-weight: 700px;
+    max-height: 75px;
+    text-decoration: none;
+    padding: 8px;
+    border-radius: 5px;
+    margin: 5px 5px 5px 40px;
+}
+
+.demoBtn:hover {
+    background-color: #15977b;
+    cursor: pointer;
 }
