--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
     <%= javascript_include_tag 'application' %>
     <script type="text/javascript">
       window.images = {
-        logo: "<%= image_url('sc_logo.png') %>"
+        logo: "<%= image_url('sc_logo.png') %>",
+        bg: "<%= image_url('geo-bg.jpg') %>"
       }
     </script>
   </head>
