--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -39,22 +39,25 @@ input, label {
     display: block;
 }
 
+
 .errors {
-    color: #2d3937;
+    color: #c83400;
     font-family: sans-serif;
     text-align: center;
+    padding: 15px;
+    font-size: 20px;
+    max-width: 300px;
+    margin-top: 30px;
+    box-sizing: border-box;
+    font-weight: 700;
 }
 
 .usernameField {
-    height: 50px;
+    height: 40px;
     width: 300px;
-    font-size: 25px;
+    font-size: 18px;
     color: #2d3937;
     font-weight: 700px;
-}
-
-.usernameLabel {
-    font-size: 20px;
 }
 
 .emailField {
@@ -73,11 +76,10 @@ input, label {
 .formSubmit {
     font-size: 24px;
     background: #ff652f;
-    border-radius: 5px;
     color: white;
+    border-radius: 5px;
     padding: 12px;
     border: 1px solid #c83400;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), 0 1px 2px rgba(0,0,0,0.05);
 }
 
 .formSubmit:hover {
@@ -98,18 +100,13 @@ strong {
 }
 
 .demoBtn {
-    background-color: #1cc29f;
-    box-shadow: 0 2px 0 #15977b;
-    color: white;
-    position: relative;
-    font-family: sans-serif;
-    font-size: 15px;
-    font-weight: 700px;
-    max-height: 75px;
-    text-decoration: none;
-    padding: 8px;
+    font-size: 24px;
+    background: #1cc29f;
     border-radius: 5px;
-    margin: 5px 5px 5px 40px;
+    color: white;
+    padding: 12px;
+    border: 1px solid #0f6b57;
+    float: right;
 }
 
 .demoBtn:hover {
