--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -1,19 +1,19 @@
 
  .header {
      display: flex;
-     margin-top: 25px;
+     padding-top: 6px;
      justify-content: space-between;
+     background-color: white;
  }
 
  .logoTitle {
      display: flex;
      text-decoration: none;
-     margin-left: 225px;
+     margin-left: 300px;
      align-self: flex-end;
  }
 
  .greeting {
-     margin-right: 225px;
      font-family: sans-serif;
      font-size: 14px;
      color: #3b4443;
@@ -22,10 +22,12 @@
  .greetingName {
      display: flex;
      font-size: 18px;
+     margin-right: 300px;
+     min-width: 164px;
  }
 
  .user {
-     margin: 5px 5px 5px 5px;
+     margin: 5px 5px 4px 5px;
      font-weight: bold;
      align-self: center;
  }
@@ -34,15 +36,14 @@
     background-color: #1cc29f;
     box-shadow: 0 2px 0 #15977b;
     color: white;
-    position: relative;
     font-family: sans-serif;
     font-size: 15px;
     font-weight: 700px;
-    max-height: 75px;
     text-decoration: none;
     padding: 8px;
     border-radius: 5px;
     margin: 5px 5px 5px 5px;
+    min-width: 55px;
  }
 
  .logo {
@@ -63,7 +64,7 @@
  .greetingBtn {
      display: flex;
      justify-content: space-between;
-     right: 200px
+     margin-right: 300px
  }
 
  .signup {
@@ -78,7 +79,8 @@
     text-decoration: none;
     padding: 8px;
     border-radius: 5px;
-    margin: 5px 5px 5px 5px;
+    margin: 3px 5px 7px 5px;
+    min-width: 51px;
 }
 
 .login {
@@ -87,8 +89,9 @@
     color: #1cc29f;
     font-size: 15px;
     font-weight: 700;
-    margin: 5px 5px 5px 5px;
+    margin: 3px 5px 5px 5px;
     align-self: center;
+    min-width: 45px;
 }
 
 .logout:hover, .signup:hover {
