--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
     <script type="text/javascript">
       window.images = {
         logo: "<%= image_url('sc_logo.png') %>",
-        bg: "<%= image_url('geo-bg.jpg') %>"
+        bg: "<%= image_url('geo-bg.jpg') %>",
+        logo_white: "<%= image_url('sc_logo_white.png') %>"
       }
     </script>
   </head>
