--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -50,6 +50,7 @@ input, label {
     margin-top: 30px;
     box-sizing: border-box;
     font-weight: 700;
+    text-shadow: none;
 }
 
 .usernameField {
