--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -129,3 +129,18 @@
     background-color: #d8d8d8;
     cursor: pointer;
 }
+
+.deleteFriend {
+    border: 1px solid #777777;
+    border-radius: 5px;
+    background-color: #EEEEEE;
+    min-width: 10px;
+    font-size: 7px;
+    padding: 1px;
+}
+
+.deleteFriend:hover {
+    cursor: pointer;
+    background-color: #c7c7c7;
+    
+}
