--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
       window.images = {
         logo: "<%= image_url('sc_logo.png') %>",
         bg: "<%= image_url('geo-bg.jpg') %>",
-        logo_white: "<%= image_url('sc_logo_white.png') %>"
+        logo_white: "<%= image_url('sc_logo_white.png') %>",
+        reviews: "<%= image_url('reviews.png') %>"
       }
     </script>
   </head>
