--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -5,12 +5,9 @@
 .leftSide {
     display: flex;
     flex-direction: column;
-    float: left;
-    width: 25%;
     text-align: center;
     margin-top: 12px;
-    align-items: flex-start;
-    margin-left: 80px;
+    align-items: center;
 }
 
 .dashboardLink {
@@ -44,7 +41,7 @@
     margin-right: 2px;
 }
 
-.dashMid {
+/* .dashMid {
     width: 50%;
     text-align: center;
 }
@@ -53,7 +50,7 @@
     float: right;
     width: 25%;
     text-align: center;   
-}
+} */
 
 .friendIndexHeader {
     position: relative;
@@ -73,7 +70,6 @@
     font-size: 16px;
     text-decoration: none;
     font-weight: 475;
-    color: #777777;
     align-self: right;
     margin-bottom: 5px;
     width: 150px;
@@ -144,3 +140,64 @@
     background-color: #c7c7c7;
     
 }
+
+.nameLink {
+    text-decoration: none;
+    color: #777777;
+}
+
+.mainDash {
+    display: flex;
+}
+
+.leftDash {
+    width: 30%;
+}
+
+.middleDash {
+    width: 40%;
+    border-left: 1px solid #c9c9c9;
+    border-right: 1px solid #c9c9c9;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 0 3px 0;
+    min-width: 740px;
+}
+
+.transactionHeader {
+    display: flex;
+    background-color: #eeeeee;
+    font-family: sans-serif;
+    font-size: 25px;
+    padding: 15px 15px 15px 15px;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 500;
+    color: #333333;
+    border-bottom: 1px solid #888888;
+    
+}
+
+.transactionHeader > button {
+    width: 125px;
+    font-size: 15px;    
+}
+
+.transactionHeader > h2 {
+    width: 150px;
+}
+
+.transactionHeader > a {
+    text-decoration: none;
+    font-size: 15px;
+    background: #ff652f;
+    color: white;
+    border-radius: 5px;
+    padding: 12px 17px 12px 17px;
+    border: 1px solid #c83400;
+}
+
+.transactionHeader > a:hover {
+    background: #c83400;
+    cursor: pointer;
+}
+
+
