--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
         logo: "<%= image_url('sc_logo.png') %>",
         bg: "<%= image_url('geo-bg.jpg') %>",
         logo_white: "<%= image_url('sc_logo_white.png') %>",
-        reviews: "<%= image_url('reviews.png') %>"
+        reviews: "<%= image_url('reviews.png') %>",
+        bill: '<%= image_url('bill_img.png') %>',
+        user: '<%= image_url('user_default.png') %>'
       }
     </script>
   </head>
