--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -25,17 +25,18 @@
     margin: 20px;
 }
 
-input:focus {
+.fullForm input:focus {
     outline: none;
     border: 1px solid #1cc29f;
     box-shadow: 0 0 10px #1cc29f;
 }
 
-input {
+.fullForm input {
     border: 1px solid #2d3937;
+    margin-top: 5px;
 }
 
-input, label {
+.fullForm input, label {
     display: block;
 }
 
@@ -86,10 +87,6 @@ input, label {
 .formSubmit:hover {
     background: #c83400;
     cursor: pointer;
-}
-
-input {
-    margin-top: 5px;
 }
 
 strong {
