--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
         logo_white: "<%= image_url('sc_logo_white.png') %>",
         reviews: "<%= image_url('reviews.png') %>",
         bill: '<%= image_url('bill_img.png') %>',
-        user: '<%= image_url('user_default.png') %>'
+        user: '<%= image_url('user_default.png') %>',
+        plates: '<%= image_url('plates.png') %>'
       }
     </script>
   </head>
