--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -160,6 +160,7 @@
 
 .splashLogo {
     max-width: 400px;
+    max-height: 300px;
     margin-top: 100px;
     margin-right: 100px;
 }
@@ -213,4 +214,5 @@
     margin-top: 100px;
     justify-content: center;
     width: 75%;
+    max-height: 495px;
 }
