--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -9,7 +9,7 @@
 }
 
 .commentItem {
-    border: 2px solid lightgray;
+    border: 1px solid #1cc29f;
     padding: 5px;
     margin: 5px 5px 0 5px;
     font-size: 11px;
@@ -18,7 +18,7 @@
 }
 
 .commentContent {
-    display: inline-block;
+    display: flex;
     font-size: 13px;
     max-width: 250px;
 }
@@ -30,7 +30,7 @@
 .commentBtn {
     color: white;
     background-color: #1cc29f;;
-    border-color: #0f6b57;
+    border: 1px solid #0f6b57;
     border-radius: 5px;
     padding: 5px;
     height: 25px;
@@ -47,12 +47,13 @@
 }
 
 .commentForm > textarea {
+    margin-top: 20px;
     border-radius: 5px;
-    max-width: 400px;
+    max-width: 200px;
     min-width: 125px;
     min-height: 50px;
-    max-height: 250px;
-
+    max-height: 100px;
+    font-family: sans-serif;
 }
 
 .commentForm > textarea:focus {
@@ -63,6 +64,7 @@
 
 .commentItemContainer {
     display: flex;
+    font-family: sans-serif;
 }
 
 .clearCommentBtn {
@@ -76,4 +78,17 @@
 
 .commentDate {
     color: gray;
+}
+
+.commentIndex {
+    min-height: 125px;
+    max-height: 125px;
+    overflow-y: scroll;
+    background-color: white;
+    width: 100%;
+    border-bottom: 1px solid lightgray;
+}
+
+.commentMessage {
+    padding-left: 5px;
 }
