add delete bill alert

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -69,7 +69,8 @@
 
 .clearCommentBtn {
     font-weight: 700;
-    color: #ff652f
+    color: #ff652f;
+    padding-right: 5px;
 }
 
 .clearCommentBtn:hover {
