--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta property="og:title" content="SplitCash" />
+    <meta property='og:image' content="<%= image_url('../../assets/images/splash.png') %>"/>
+    <meta property="og:url" content="https://splitcash-app.herokuapp.com/#/"/>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
