--- a/app/assets/stylesheets/details.scss
+++ b/app/assets/stylesheets/details.scss
@@ -15,15 +15,19 @@
     height: 200px;
 }
 
-.editField {
+.editField1, .editField2 {
     border: 1px solid gray;
     margin: 5px;
 }
 
-.editField:focus {
+.editField1:focus, .editField2:focus {
     outline: none;
     border: 1px solid #1cc29f;
     box-shadow: 0 0 10px #1cc29f;
+}
+
+.editField2 {
+    margin-left: 18px;
 }
 
 .editLabel {
